--- a/k8s/base/comment/comment-api/service.yaml
+++ b/k8s/base/comment/comment-api/service.yaml
@@ -1,7 +1,14 @@
-apiVersion: # TODO:
-kind: # TODO:
+apiVersion: v1
+kind: Service
 metadata:
   name: comment-api
 spec:
-  type: # TODO:
-  ports: # TODO:
+  type: ClusterIP
+  ports: 
+  - name: grpc
+    port: 8081
+    targetPort: 8081
+  - name: prometheus
+    port: 2222
+    targetPort: 2222
+        
